--- a/static/css/gameboard.css
+++ b/static/css/gameboard.css
@@ -4,7 +4,7 @@
     text-align: left
 }
 .gameboard-column {
-    padding: 10px;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
@@ -21,7 +21,6 @@
 .gameboard-row {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     width: 100%;
     border-bottom: solid 1px white;
 }
@@ -40,6 +39,22 @@
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
+
+}
+.progress {
+  width: 100%;
+  border-radius: 25px;
+  background-color: grey;
+  margin: 15px 10px 10px 0px;
+}
+.progress-bar {
+  width: 10%;
+  height: 30px;
+  border-radius: 25px;
+  background-color: var(--theme-color);
+  text-align: center; /* To center it horizontally (if you want) */
+  line-height: 30px; /* To center it vertically */
+  color: black;
 }
 .scoreboard-red {
     background-color: #750b20;
@@ -66,11 +81,21 @@
     padding:5px;
 }
 .gp-red {
+    margin: 5px;
+    border-radius: 4px;
+    min-width: 280px;
+    max-height: 51px;
     background-color: #750b20;
 }
+
 .gp-blue {
+    margin: 5px;
+    border-radius: 4px;
+    min-width: 280px;
+    max-height: 51px;
     background-color: #191970;
 }
+
 .gp-ability {
     padding-bottom: 5px;
 }
@@ -79,6 +104,7 @@
     font-size: 12px;
 }
 .gp-pid {
+    margin-top: 10px;
     font-size: 24px;
 }
 .golden-goose {
@@ -86,13 +112,22 @@
 }
 .golden-goose span {
     float: right;
+    margin-top: 6px;
     width: fit-content;
     position: absolute;
-    margin-top: 6px;
 }
 .gp-red .golden-goose span {
     left: 0;
 }
 .gp-blue .golden-goose span {
     right: 0;
+}
+p.status {
+    float: right;
+    margin: 9px 10px 0px 0px;
+    border-radius: 10px;
+    padding: 0px 5px;
+    background-color: grey;
+    font-size: 11px;
+    color: white;
 }
