--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -18,19 +18,20 @@
                     <option value="{{ op.id }}">{{ op.name }} - {{ op.start }}</option>
                 {% endfor %}
              </select>
+             <p id="red-status" class="status" style="display: None"></p>
             <select id="blue-operations" onchange="refresh()">
                 <option value="" disabled selected>Select a blue operation</option>
                 {% for op in blue_ops %}
                     <option value="{{ op.id }}">{{ op.name }} - {{ op.start }}</option>
                 {% endfor %}
              </select>
+            <p id="blue-status" class="status" style="display: None"></p>
             <br>
             <button class="button-success button-atomic" onclick="refresh()">Refresh</button>
         </div>
         <div id="the-gameboard" class="column">
             <div class="gameboard-row scoreboard">
               <div class="gameboard-column">
-                  <h3 id="gb-red-state">RED: <span></span></h3>
                   <div class="scoreboard-points scoreboard-red">
                       <p id="gb-red-points"></p>
                       <p style="font-size:12px;margin-top: -40px">points</p>
@@ -40,25 +41,24 @@
                   <h3>Process</h3>
               </div>
               <div class="gameboard-column">
-                  <h3 id="gb-blue-state">BLUE: <span></span></h3>
                   <div class="scoreboard-points scoreboard-blue">
                       <p id="gb-blue-points"></p>
                       <p style="font-size:12px;margin-top: -40px">points</p>
                   </div>
               </div>
             </div>
+            <div id="exchanges" style="margin: 10px 0px;"></div>
         </div>
     </div>
 </div>
 
 <div id="game-piece" class="gameboard-row" style="display:none;">
-  <div class="gameboard-column gp-red">
-  </div>
-  <div class="gameboard-column mid">
-  </div>
-  <div class="gameboard-column gp-blue">
-  </div>
+  <div class="gameboard-column red"></div>
+  <div class="gameboard-column mid"></div>
+  <div class="gameboard-column blue"></div>
 </div>
+<div id="red-piece" class="gameboard-column gp-red" style="display:none"></div>
+<div id="blue-piece" class="gameboard-column gp-blue" style="display:none"></div>
 
 <div id="piece-modal" class="modal">
     <form class="modal-content ability-viewer">
@@ -79,120 +79,4 @@
     </form>
 </div>
 
-<script>
-    $(document).ready(function () {
-        let redOps = $('#red-operations').children('option').length-1;
-        let blueOps = $('#blue-operations').children('option').length-1;
-        if(redOps===0 && blueOps===0) {
-            stream('GameBoard is only useful if a red or blue operation has been started.')
-        } else {
-            stream('Select red/blue operations to see what the defense detected and responded to.');
-        }
-    });
-
-    function refresh(){
-        function draw(data){
-            let spacing = '&nbsp;&nbsp;-&nbsp;&nbsp;';
-            $('#the-gameboard .gameboard-row').not(':first').remove();
-            $('#gb-red-state span').text(data.red_state);
-            $('#gb-blue-state span').text(data.blue_state);
-
-            let links = data.links;
-            let bluePoints = 0;
-            let redPoints = 0;
-            let pid = 0;
-            for(let i=0; i<links.length; i++){
-                if(links[i].cleanup) {
-                    continue;
-                }
-                let piece = $("#game-piece").clone();
-                let gpSide = '';
-                if(links[i].ability.access === 1) {
-                    redPoints += handOutRedPoints(links[i]);
-                    gpSide = '.gp-red'
-                    pid = links[i].pid;
-                } else if (links[i].ability.access === 2) {
-                    bluePoints += handOutBluePoints(links[i]);
-                    gpSide = '.gp-blue'
-                    pid = links[i].pin;
-                }
-                piece.attr("id", "link_id_" + links[i].id);
-                piece.attr("link_no", i);
-                piece.find(gpSide).html(
-                    '<span class="golden-goose"><span></span></span>' +
-                    '<span class="gp-ability">'+links[i].ability.name+'</span>' +
-                    '<span class="gp-time">' + links[i].finish + '</span>');
-                piece.find('.mid').html(
-                    '<span class="gp-pid">'+ pid +'</span>' +
-                    '<span class="gp-host">'+ links[i].host +'</span>' +
-                    '<span class="gp-agent">' + links[i].paw + '</span>');
-                if(links[i].facts.length > 0){
-                    piece.find('.golden-goose span').html('&#11088;');
-                }
-
-                $('#the-gameboard').append(piece);
-                piece.show();
-            }
-            $('#gb-blue-points').text(bluePoints);
-            $('#gb-red-points').text(redPoints);
-            $(".gameboard-row").on('click', function () {
-                var $input = $( this );
-                document.getElementById('piece-modal').style.display='block';
-                let modal_body = '';
-                $.each(links[$input.attr('link_no')], function( key, value ) {
-                    if (key === 'ability'){
-                        return;
-                    }
-                    modal_body += "<tr><td>" + key + "</td><td>" + JSON.stringify(value) + "</td></tr>";
-                })
-                $("#piece-modal-body").html(modal_body);
-            })
-        }
-        let redOpId = parseInt($('#red-operations option:selected').attr('value'));
-        let blueOpId = parseInt($('#blue-operations option:selected').attr('value'));
-        stream('Gold stars mean information was learned to help the team.');
-        restRequest('POST', {'red':redOpId,'blue':blueOpId}, draw, '/plugin/gameboard/pieces');
-    }
-
-    function handOutBluePoints(link) {
-        let points = 0;
-        if(link.ability.tactic === 'response') {
-            points += 2;
-        }
-        return points;
-    }
-
-    function handOutRedPoints(link){
-        let points = 0;
-        if(link.status !== 0) {
-            points -= 1;
-            return points;
-        }
-        if(link.ability.tactic === 'credential-access') {
-            points += 3;
-        } else if(link.ability.tactic === 'collection') {
-            points += 2;
-        } else if (link.ability.tactic === 'impact') {
-            points +=3;
-        } else if (link.ability.tactic === 'lateral-movement') {
-            points +=5;
-        } else if (link.ability.tactic === 'exfiltration') {
-            points +=3;
-        } else if (link.ability.tactic === 'defense-evasion') {
-            points +=4;
-        } else if (link.ability.tactic === 'persistence') {
-            points +=6;
-        } else if (link.ability.tactic === 'privilege-escalation') {
-            points +=3;
-        } else {
-            points += 1;
-        }
-        return points;
-    }
-
-    function resetPieceModal() {
-        let modal = $('#piece-modal');
-        modal.hide();
-        modal.find('#piece-modal-body').html('');
-    }
-</script>
+<script src="/gameboard/js/gameboard.js"></script>
