basic hide reveal and blue score fix

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -57,8 +57,11 @@
   <div class="gameboard-column mid"></div>
   <div class="gameboard-column blue"></div>
 </div>
+<div id="red-wrapper" class="gp-wrapper" style="display:none"></div>
+<div id="blue-wrapper" class="gp-wrapper" style="display:none"></div>
 <div id="red-piece" class="gameboard-column gp-red" style="display:none"></div>
 <div id="blue-piece" class="gameboard-column gp-blue" style="display:none"></div>
+<div id="cover-piece" class="gameboard-column gp-cover" style="display:none">Click to Reveal</div>
 
 <div id="piece-modal" class="modal">
     <form class="modal-content ability-viewer">
