--- a/static/css/gameboard.css
+++ b/static/css/gameboard.css
@@ -80,20 +80,51 @@
     color: white;
     padding:5px;
 }
+
+.gp-wrapper {
+    position: relative;
+
+}
+
 .gp-red {
+    position:relative;
     margin: 5px;
     border-radius: 4px;
     min-width: 280px;
     max-height: 51px;
     background-color: #750b20;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .gp-blue {
+    position:relative;
     margin: 5px;
     border-radius: 4px;
     min-width: 280px;
     max-height: 51px;
     background-color: #191970;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.gp-cover {
+    position:absolute;
+    margin: 5px;
+    border-radius: 4px;
+    min-width: 280px;
+    max-height: 51px;
+    width: 93%;
+    height: 64%;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+
 }
 
 .gp-ability {
