--- a/static/css/gameboard.css
+++ b/static/css/gameboard.css
@@ -115,11 +115,12 @@
 .gp-cover {
     position:absolute;
     margin: 5px;
+    padding: 22px 9px;
     border-radius: 4px;
     min-width: 280px;
     max-height: 51px;
     width: 93%;
-    height: 64%;
+    background-color: rgba(255, 255, 255, 0.1);
     transform-style: preserve-3d;
     transition: transform 0.6s;
     -webkit-backface-visibility: hidden;
@@ -143,7 +144,7 @@
 }
 .golden-goose span {
     float: right;
-    margin-top: 6px;
+    margin-top: 10px;
     width: fit-content;
     position: absolute;
 }
