--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -69,7 +69,7 @@
           <span onclick="resetPieceModal();" class="close" title="Close Modal">&times;</span>
         </div>
         <div class="container" style="text-align:left">
-            <p>Response Command Run</p>
+            <p>Command Run</p>
             <code id="piece-cmd"></code>
             <hr>
             <p>New Facts Found</p>
