updates to reveal cover css

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -61,7 +61,9 @@
 <div id="blue-wrapper" class="gp-wrapper" style="display:none"></div>
 <div id="red-piece" class="gameboard-column gp-red" style="display:none"></div>
 <div id="blue-piece" class="gameboard-column gp-blue" style="display:none"></div>
-<div id="cover-piece" class="gameboard-column gp-cover" style="display:none">Click to Reveal</div>
+<div id="cover-piece" class="gameboard-column gp-cover" style="display:none">
+    <span class="gp-reveal">Click to Reveal</span>
+</div>
 
 <div id="piece-modal" class="modal">
     <form class="modal-content ability-viewer">
