--- a/static/css/gameboard.css
+++ b/static/css/gameboard.css
@@ -41,21 +41,6 @@
     margin-right: auto;
 
 }
-.progress {
-  width: 100%;
-  border-radius: 25px;
-  background-color: grey;
-  margin: 15px 10px 10px 0px;
-}
-.progress-bar {
-  width: 10%;
-  height: 30px;
-  border-radius: 25px;
-  background-color: var(--theme-color);
-  text-align: center; /* To center it horizontally (if you want) */
-  line-height: 30px; /* To center it vertically */
-  color: black;
-}
 .scoreboard-red {
     background-color: #750b20;
 }
@@ -91,7 +76,6 @@
     margin: 5px;
     border-radius: 4px;
     min-width: 280px;
-    max-height: 51px;
     background-color: #750b20;
     transform-style: preserve-3d;
     transition: transform 0.6s;
@@ -104,7 +88,6 @@
     margin: 5px;
     border-radius: 4px;
     min-width: 280px;
-    max-height: 51px;
     background-color: #191970;
     transform-style: preserve-3d;
     transition: transform 0.6s;
@@ -115,11 +98,10 @@
 .gp-cover {
     position:absolute;
     margin: 5px;
-    padding: 22px 9px;
     border-radius: 4px;
     min-width: 280px;
-    max-height: 51px;
-    width: 93%;
+    width: 95%;
+    height: 70%;
     background-color: rgba(255, 255, 255, 0.1);
     transform-style: preserve-3d;
     transition: transform 0.6s;
@@ -127,7 +109,10 @@
     backface-visibility: hidden;
 
 }
-
+.gp-reveal {
+    position: relative;
+    top: 32%;
+}
 .gp-ability {
     padding-bottom: 5px;
 }
