cleaner javascript and minor update to HTML

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -33,7 +33,7 @@
             <div class="gameboard-row scoreboard">
               <div class="gameboard-column">
                   <div class="scoreboard-points scoreboard-red">
-                      <p id="gb-red-points"></p>
+                      <p id="gb-red-points">0</p>
                       <p style="font-size:12px;margin-top: -40px">points</p>
                   </div>
               </div>
@@ -42,7 +42,7 @@
               </div>
               <div class="gameboard-column">
                   <div class="scoreboard-points scoreboard-blue">
-                      <p id="gb-blue-points"></p>
+                      <p id="gb-blue-points">0</p>
                       <p style="font-size:12px;margin-top: -40px">points</p>
                   </div>
               </div>
@@ -52,7 +52,7 @@
     </div>
 </div>
 
-<div id="game-piece" class="gameboard-row" style="display:none;">
+<div id="exchange" class="gameboard-row" style="display:none;">
   <div class="gameboard-column red"></div>
   <div class="gameboard-column mid"></div>
   <div class="gameboard-column blue"></div>
