--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -75,7 +75,9 @@
     <span class="gp-agent"></span>
 </div>
 <div id="cover-piece" class="gameboard-column gp-cover" style="display:none">
-    <span class="gp-reveal">Click to Reveal</span>
+    <span class="gp-ability"></span>
+    <span class="gp-tid"></span>
+    <span class="gp-reveal">Click to reveal more information</span>
 </div>
 
 <div id="piece-modal" class="modal">
