--- a/static/css/gameboard.css
+++ b/static/css/gameboard.css
@@ -152,3 +152,23 @@ p.status {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
+h4 {
+    margin: 20px 0px;
+    font-family: var(--default-font);
+    font-size: 25px;
+    font-weight: 100;
+    color: white;
+}
+hr {
+    margin: 20px 0px;
+}
+pre:last-of-type {
+    margin: 0px 20px;
+}
+pre {
+    margin: 5px 20px;
+}
+
+p.piece-query-type {
+    margin: 0px;
+}
