elk queries, added time to splunk queries

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -86,8 +86,8 @@
           <span onclick="resetPieceModal();" class="close" title="Close Modal">&times;</span>
         </div>
         <div class="container" style="text-align:left">
-            <h4>Command Run</h4>
-            <pre id="piece-cmd"></pre>
+            <h4>Command</h4>
+            <pre id="piece-cmd" class="piece-cmd"></pre>
             <div id="facts-found">
                 <hr>
                 <h4>New Facts Found</h4>
