--- a/static/css/gameboard.css
+++ b/static/css/gameboard.css
@@ -166,9 +166,15 @@ pre:last-of-type {
     margin: 0px 20px;
 }
 pre {
-    margin: 5px 20px;
+    margin: 10px 20px;
 }
-
+pre.piece-query, pre.piece-cmd {
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
+    background-color: rgb(50,50,50);
+    padding: 8px;
+}
 p.piece-query-type {
-    margin: 0px;
+    margin-bottom: 5px;
 }
