tag spacing in html

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -91,9 +91,7 @@
                     <tbody>
                         <tr>
                             <td style="width: 10%;"><b>Link Unique:</b></td>
-                            <td>
-                                <div id="piece-id" style="padding: 10px 0px;"></div>
-                            </td>
+                            <td><div id="piece-id" style="padding: 10px 0px;"></div></td>
                         </tr>
                         <tr>
                             <td style="width: 10%;"><b>Ability:</b></td>
@@ -109,8 +107,9 @@
                         <tr>
                             <td style="width:10%"><b>Command:</b></td>
                             <td><pre id="piece-cmd" style="margin: 10px 0px;"></pre></td>
-                    </tr>
-                </tbody></table>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             <div id="facts-found">
                 <h4 class="collapsible" id="facts-found-header">New Facts Found</h4>
