--- a/static/css/gameboard.css
+++ b/static/css/gameboard.css
@@ -8,11 +8,11 @@
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
-    flex: 2;
+    flex: 3;
     text-align: center;
 }
-.gameboard-column:nth-of-type(2) {
-    flex: 1;
+.gameboard-column:nth-of-type(3) {
+    flex: 2;
 }
 .gameboard-column h3 {
     text-transform: uppercase;
@@ -34,8 +34,11 @@
 .scoreboard {
     border: 0;
 }
+.scoreboard .side {
+    flex: 1;
+}
 .scoreboard-points {
-    width: 25%;
+    width: 34%;
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
@@ -68,31 +71,39 @@
 
 .gp-wrapper {
     position: relative;
-
 }
 
-.gp-red {
+.gp-red,
+.gp-blue,
+.gp-points {
     position:relative;
     margin: 5px;
-    border-radius: 4px;
-    min-width: 280px;
-    background-color: #750b20;
     transform-style: preserve-3d;
     transition: transform 0.6s;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-
+.gp-red,
 .gp-blue {
-    position:relative;
-    margin: 5px;
-    border-radius: 4px;
     min-width: 280px;
+    border-radius: 4px;
+}
+.gp-red {
+    background-color: #750b20;
+}
+.gp-blue {
     background-color: #191970;
-    transform-style: preserve-3d;
-    transition: transform 0.6s;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+}
+.gp-points {
+    justify-content: center;
+    flex: 1 !important;
+    border-radius: 20px;
+}
+.points-red {
+    background-color: #750b20;
+}
+.points-blue {
+    background-color: #191970;
 }
 
 .gp-cover {
@@ -136,6 +147,9 @@
 }
 .gp-blue .golden-goose span {
     right: 0;
+}
+.points-delta {
+    flex: 1;
 }
 p.status {
     float: right;
