--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -83,7 +83,9 @@
     <span class="gp-tid"></span>
     <span class="gp-reveal">Click to reveal more information</span>
 </div>
-<div id="points-piece" class="gameboard-column gp-points"></div>
+<div id="points-piece" class="gameboard-column gp-points">
+    <span class="points-value"></span>
+</div>
 
 <div id="piece-modal" class="modal">
     <div class="modal-content ability-viewer">
