--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -83,8 +83,12 @@
     <span class="gp-tid"></span>
     <span class="gp-reveal">Click to reveal more information</span>
 </div>
-<div id="points-piece" class="gameboard-column gp-points">
+<div id="points-wrapper" class="points-wrapper" style="display:none"></div>
+<div id="points-piece" class="gameboard-column gp-points points-cover" style="display:none">
     <span class="points-value"></span>
+</div>
+<div id="points-details" class="gameboard-column gp-points points-details" style="display:none">
+    <span class="points-reason"></span>
 </div>
 
 <div id="piece-modal" class="modal">
