--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -7,7 +7,7 @@
         <div id="gameboard-sidebar" class="column section-border" style="flex:25%;text-align:left;padding:15px;">
              <h1 style="font-size:50px;margin-top:0;">GameBoard</h1>
              <h2 style="margin-top:-35px">red vs. blue exercises</h2>
-             <p>
+             <p style="text-align:left">
                  Monitor red-and-blue team operations during an exercise to see if blue can detect, respond and
                  shut down a red-team adversary.
              </p>
@@ -17,6 +17,12 @@
                 {% for op in red_ops %}
                     <option value="{{ op.id }}">{{ op.name }} - {{ op.start }}</option>
                 {% endfor %}
+                {% if hidden_red_operations|length %}
+                    <option value="hidden" disabled>Hidden operations</option>
+                    {% for op in hidden_red_operations %}
+                        <option value="{{ op.id }}">{{ op.name }} - {{ op.start }}</option>
+                    {% endfor %}
+                {% endif %}
              </select>
              <p id="red-status" class="status" style="display: None"></p>
             <select id="blue-operations" onchange="refresh()">
@@ -28,6 +34,30 @@
             <p id="blue-status" class="status" style="display: None"></p>
             <br>
             <button class="button-success button-atomic" onclick="refresh()">Refresh</button>
+            <br><br>
+            <div id="hidden-operations-wrapper" style="">
+                <p id="hidden-operations-header" style="color: white; font-size: 20px; margin:auto; cursor:pointer">+ Create Hidden Operation</p>
+                <div id="hidden-operations-contents" style="display:none">
+                    <div id="hidden-operations-add" style="margin:auto">
+                        <input id="hiddenOpName" class="hiddenOpInfo" placeholder="Operation name" onchange="validateHiddenOpStart()"/>
+                        <select id="hiddenOpGroup" class="hiddenOpInfo" style="text-align-last: center" onchange="validateHiddenOpStart()">
+                            <option value="" disabled selected>Select a group</option>
+                            {% for group in groups %}
+                                <option value="{{ group }}">{{ group }}</option>
+                            {% endfor %}
+                        </select>
+                        <select id="hiddenOpProfile" class="hiddenOpInfo queueOption" style="text-align-last: center" onchange="validateHiddenOpStart()">
+                            <option value="" disabled selected>No adversary chosen</option>
+                            {% for adv in adversaries %}
+                              <option id="qflow-{{ adv.adversary_id }}" value="{{ adv.adversary_id }}">{{ adv.name }}</option>
+                            {% endfor %}
+                        </select>
+                        <button id="HdnOpBtn" type="button" style="opacity:0.5" disabled="disabled" class="button-notready atomic-button" onclick="handleHiddenStartAction()">Start</button>
+                        <div id="hiddenOpReturnStatus" style="display:none"></div>
+                    </div>
+                    &nbsp
+                </div>
+            </div>
         </div>
         <div id="the-gameboard" class="column">
             <div class="gameboard-row scoreboard">
@@ -143,3 +173,56 @@
 </div>
 
 <script src="/gameboard/js/gameboard.js"></script>
+
+<script>
+    $('#hidden-operations-header').click(function() {
+        if ($('#hidden-operations-contents').css('display') == 'none') {
+           $('#hidden-operations-header').text('- Create Hidden Operation');
+        } else {
+            $('#hidden-operations-header').text('+ Create Hidden Operation');
+        }
+        $('#hidden-operations-contents').slideToggle();
+    });
+
+    function handleHiddenStartAction() {
+        let data = {};
+        data['op_name'] = $('#hiddenOpName').val();
+        data['group'] = $('#hiddenOpGroup').val();
+        data['profile'] = $('#hiddenOpProfile').val();
+        restRequest('POST', data, handleHiddenStartActionCallback, '/plugin/gameboard/hidden');
+    }
+
+    function handleHiddenStartActionCallback(data) {
+        if (data.hidden_red_operation.length > 0) {
+            let op = data.hidden_red_operation[0];
+            if ($('#gameboard').find('#red-operations option[value="hidden"]').length == 0) {
+                $('#gameboard').find('#red-operations').append('<option value="hidden" disabled>Hidden operations</option>');
+            }
+            $('#gameboard').find('#red-operations').append('<option value="'+op.id+'">'+op.name+' - '+op.start+'</option>');
+            $('#gameboard').find('#hiddenOpReturnStatus').text('Hidden operation "'+op.name+'" created');
+        } else {
+            $('#gameboard').find('#hiddenOpReturnStatus').text('Hidden operation failed to create');
+        }
+        $('#gameboard').find('#hiddenOpReturnStatus').fadeIn();
+        setTimeout(function() {
+            $('#gameboard').find('#hiddenOpReturnStatus').fadeOut();
+        }, 3000);
+    }
+
+    function validateHiddenOpStart() {
+        let name = $('#gameboard').find('#hiddenOpName').val();
+        let group = $('#gameboard').find('#hiddenOpGroup').val();
+        let profile = $('#gameboard').find('#hiddenOpProfile').val();
+        if (name == null || name == "" || group == null || group == "" || profile == null || profile == "") {
+            $('#gameboard').find('#HdnOpBtn').css('opacity', 0.5);
+            $('#gameboard').find('#HdnOpBtn').attr('disabled', 'true');
+            $('#gameboard').find('#HdnOpBtn').removeClass('button-success');
+            $('#gameboard').find('#HdnOpBtn').addClass('button-notready');
+        } else {
+            $('#gameboard').find('#HdnOpBtn').css('opacity', 1);
+            $('#gameboard').find('#HdnOpBtn').removeAttr('disabled');
+            $('#gameboard').find('#HdnOpBtn').removeClass('button-notready');
+            $('#gameboard').find('#HdnOpBtn').addClass('button-success');
+        }
+    }
+</script>
