--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -175,16 +175,18 @@
 <div id="verify-detection-modal" class="modal" style="display:none">
     <div class="modal-content" style="width:60%">
         <div class="container">
-            <div class="row duk-modal">
-                <span onclick="document.getElementById('verify-detection-modal').style.display='none'" class="close" title="Close Modal">&times;</span>
-                <div id="verify-detection-form" class="row-simple">
-                    <div class="column" style="width:75%">
+            <div class="row duk-modal" style="display:block">
+                <div onclick="document.getElementById('verify-detection-modal').style.display='none'">
+                    <span class="close" title="Close Modal">&times;</span>
+                </div>
+                <div id="verify-detection-form" class="row-simple" style="width:100%">
+                    <div class="column" style="width:75%;margin-bottom:-35px">
                         <div class="column" style="flex:60%">
                             <table frame=void rules=rows style="border-spacing:2px;width:100%">
                                 <tr>
                                     <td style="width:10%"><b style="color:white">host:</b></td>
                                     <td>
-                                        <select id="host-select" style="width:99%">
+                                        <select id="host-select" style="width:99%; margin:5px">
                                             <option value="" disabled="disabled" selected>Select a host</option>
                                             {% for host in hosts %}
                                                 <option id="select-{{ host }}" value="{{ host }}">{{ host }}</option>
@@ -195,7 +197,7 @@
                                 <tr>
                                     <td style="width:10%"><b style="color:white">tactic:</b></td>
                                     <td>
-                                        <select id="tactic-select" onchange="verifyPopulateTechniques('verify-detection-modal', tactics_and_techniques)" style="width:99%">
+                                        <select id="tactic-select" onchange="verifyPopulateTechniques('verify-detection-modal', tactics_and_techniques)" style="width:99%; margin:5px">
                                             <option disabled selected>Choose a tactic</option>
                                             {% for tactic in tactics %}
                                                 <option value="{{ tactic }}" data-tactic="{{ tactic }}">{{ tactic }}</option>
@@ -206,7 +208,7 @@
                                 <tr>
                                     <td style="width:10%"><b style="color:white">technique:</b></td>
                                     <td>
-                                        <select id="technique-select" style="width:99%">
+                                        <select id="technique-select" style="width:99%; margin:5px">
                                             <option disabled selected>Choose a technique</option>
                                         </select>
                                     </td>
@@ -222,14 +224,13 @@
                                         </label>
                                     </div>
                                     </td>
-                                    <td><input id="pid-entry" type="text" placeholder="Enter PID/GUID"></td>
+                                    <td><input id="pid-entry" type="text" placeholder="Enter PID/GUID" style="width:99%;margin:5px;text-align:left;"></td>
                                 </tr>
                             </table>
-                            <button id="submit-verify-detection" type="button" class="button-success atomic-button" onclick="submitVerifyDetection('verify-detection-modal')" style="margin-top:25px; width:50%">Submit</button>
+                            <button id="submit-verify-detection" type="button" class="button-success atomic-button" onclick="submitVerifyDetection('verify-detection-modal')" style="margin-top:25px;width:50%;padding:0px">Submit</button>
                         </div>
                     </div>
                 </div>
-                <br>
                 <div id="hunt-result" style="">
                     <div id="result-box" class="column">
                         <div id="result-correct" style="display:none">
@@ -251,46 +252,4 @@
 
 <script>
     var tactics_and_techniques = {{ tactics | tojson }};
-
-    function verifyPopulateTechniques(parentId, tactics_and_techniques) {
-        let parent = $('#'+parentId);
-        $(parent).find('#technique-select').empty().append("<option disabled='disabled' selected>Choose a technique</option>");
-        let tactic = $(parent).find('#tactic-select').val();
-        let techniques = tactics_and_techniques[tactic];
-        $.each(techniques, function(i) {
-            verifyAppendTechniqueToList(parentId, tactic, techniques[i]);
-        });
-        alphabetize_dropdown($(parent).find('#technique-select'));
-    }
-
-    function verifyAppendTechniqueToList(parentId, tactic, value) {
-        $('#'+parentId).find('#technique-select').append($("<option></option>")
-            .attr("value", value[0])
-            .data("technique", value[0])
-            .text(value[0] + ' | '+ value[1]));
-    }
-
-    function submitVerifyDetection(parentId) {
-        let parent = $('#'+parentId);
-        let data = {};
-        data['host'] = $(parent).find('#host-select').val();
-        data['technique'] = $(parent).find('#technique-select').val();
-        if ($(parent).find('#togBtnHunt').is(':checked')) {
-            data['verify'] = 'guid';
-        } else {
-            data['verify'] = 'pid';
-        }
-        data['info'] = $(parent).find('#pid-entry').val();
-        $(parent).find('#result-box').children().hide();
-        restRequest('POST', data, verifyDetectionCallback, '/plugin/gameboard/detection');
-    }
-
-    function verifyDetectionCallback(data) {
-        if (data['verified'] != false) {
-            $('#gameboard').find('#result-correct').fadeIn();
-            huntListVerifiedLinks(data['verified_links']);
-        } else {
-            $('#gameboard').find('#result-wrong').fadeIn();
-        }
-    }
 </script>
